# qtransformer

./: .gitignore  analyse.py  analyse_model.py  atari_evaluator.py  atari_utils.py  bc_trainer.py  cql_trainer.py  create_dataset.py  create_dataset_single_action.py  d4rl_evaluator.py  decision_transformer.py  eval.py  evaluate.py  finetune.py  pyproject.toml  q_trainer.py  qtransformer.py  run_eval.py  run_single.py  sb.yml  schedulers.py  seq_env_wrapper.py  sequence_dataset.py  single_qtransformer.py  test.py  tests.py  train.py  train_dt.py  train_logger.py  train_single.py  trainer.py  util.py  wandb_logger.py
conf/: config.yaml  config_dt.yaml  config_hc.yaml
cql/: cql_agent.py  train_cql.py
src/qtransformer/: test.py  train.py  trainer.py  trainer_config.py
src/qtransformer/data/: sequence_dataset.py
src/qtransformer/env/: d4rl_utils.py  seq_env_wrapper_gymnasium.py
src/qtransformer/evaluator/: atari_evaluator.py  d4rl_evaluator.py  evaluator.py
src/qtransformer/logging/: wandb_logger.py
src/qtransformer/loss/: bc_loss.py  loss.py  q_loss.py
src/qtransformer/model/: llama.py  qtransformer.py  qtransformer_config.py
src/qtransformer/train_logging/: traín_logger.py  wandb_logger.py
src/qtransformer/util/: schedulers.py
transformer/: causal_self_attention.py  transformer.py
